src/test/ui/const-generics/raw-ptr-const-param.stderr
warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/raw-ptr-const-param.rs:4:12
   |
LL | #![feature(const_generics, const_compare_raw_pointers)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error[E0308]: mismatched types
  --> $DIR/raw-ptr-const-param.rs:10:38
   |
LL |     let _: Const<{15 as *const _}> = Const::<{10 as *const _}>;
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^ expected `$PREFIX0000000f : *const u32`, found `$PREFIX0000000a : *const u32`
   |
   = note: expected type `Const<$PREFIX0000000f : *const u32>`
              found type `Const<$PREFIX0000000a : *const u32>`

error[E0308]: mismatched types
  --> $DIR/raw-ptr-const-param.rs:13:38
   |
LL |     let _: Const<{10 as *const _}> = Const::<{&8_u32 as *const _}>;
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `$PREFIX0000000a : *const u32`, found `{pointer} : *const u32`
   |
   = note: expected type `Const<$PREFIX0000000a : *const u32>`
              found type `Const<{pointer} : *const u32>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
